Add Part4.html and minor updates.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 		<li><h2>
 			<a href="pages/Part3.html">The Relational Model and Normalization</a>
 		</h2></li>
+		<li><h2>
+			<a href="pages/Part4.html">Physical Database Design</a>
+		</h2></li>		
 	</ol>
 
 	<footer><a href="pages/Citations.html">Citations</a></footer>
