--- a/pages/Part3.html
+++ b/pages/Part3.html
@@ -301,7 +301,7 @@
         </dd>
         <dt>Third normal form (3NF)</dt>
         <dd>
-            A relation that is in second normal orm and has no transitive dependencies.
+            A relation that is in second normal form and has no transitive dependencies.
         </dd>
         <dt>Transitive deendency</dt>
         <dd>
