--- a/pages/Part4.html
+++ b/pages/Part4.html
@@ -102,6 +102,11 @@
         <dd>
             Distrution of the columns of a logical relation into several separate physical tables.
         </dd>
+    </dl>
+
+    <h2>Unit 4 Section 2: File Organization and Database Architectures</h2>
+
+    <dl>
         <dt>Physical file</dt>
         <dd>
             A named portion of secndary memory (such as a hard disk) allocated for the purpose of
