--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 		<li><h2>
 			<a href="pages/Part5.html">SQL - A Standard Navigation Language for Rational Databases</a>
 		</h2></li>		
+		<li><h2>
+			<a href="pages/Part6.html">Introduction to Two-Tier and Three-Tier Architectures, and the
+				Internet Database Environment
+			</a>
+		</h2></li>
 	</ol>
 
 	<footer><a href="pages/Citations.html">Citations</a></footer>
