Updating content, add Part7.html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 		</h2></li>		
 		<li><h2>
 			<a href="pages/Part6.html">Introduction to Two-Tier and Three-Tier Architectures, and the
-				Internet Database Environment
-			</a>
+				Internet Database Environment</a>
+		</h2></li>
+		<li><h2>
+			<a href="pages/Part7.html">Introduction to Data Warehousing</a>
 		</h2></li>
 	</ol>
 
