--- a/pages/Part6.html
+++ b/pages/Part6.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<title>Database Management Learning Journey - Part 5</title>
+	<title>Database Management Learning Journey - Part 6</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -15,6 +15,12 @@
     <h3>Lecture 6 by Daniel Gaudreault</h3>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/2MNo1gwdvWA?start=189" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h3>Lecture 7 by Daniel Gaudreault</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Bo4G9hUnv0U?start=149" 
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
